--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ python:
 - 3.6
 - 3.5
 - 3.7
-install: pip install -U tox-travis
+install:
+  - pip install -U tox-travis
+  - pip install --upgrade -r requirements.txt
 
 before_script:
   - pip install --upgrade pytest coveralls
